--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -68,7 +68,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="ResearchTree">
-      <HintPath>..\..\..\..\..\workshop\content\294100\1266570759\1.1\Assemblies\ResearchTree.dll</HintPath>
+      <HintPath>..\..\ResearchTree\Assemblies\ResearchTree.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
