--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -67,10 +67,6 @@
       <HintPath>..\..\..\..\..\workshop\content\294100\818773962\v1.1\Assemblies\HugsLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="ResearchTree">
-      <HintPath>..\..\ResearchTree\Assemblies\ResearchTree.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
     <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -330,11 +326,28 @@
     <Compile Include="CompProperties_TitleMaker.cs" />
     <Compile Include="CompProperties_StorageGraphic.cs" />
     <Compile Include="CompStorageGraphic.cs" />
-    <Compile Include="HarmonyPatch.cs" />
+    <Compile Include="Harmony\HarmonyPatch.cs" />
+    <Compile Include="Harmony\GoExplore_Patches.cs" />
+    <Compile Include="Harmony\ResearchTree_ResearchPal\Constants.cs" />
+    <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Assets.cs" />
+    <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Patches.cs" />
+    <Compile Include="Harmony\ThingOwner_NotifyAdded.cs" />
+    <Compile Include="Harmony\ResearchManager_Patches.cs" />
+    <Compile Include="Harmony\WorkGiver_Repair_HasJobOnThing.cs" />
+    <Compile Include="Harmony\WorkGiver_GrowerSow_JobOnCell.cs" />
+    <Compile Include="Harmony\Bill_PawnAllowedToStartAnew.cs" />
+    <Compile Include="Harmony\FloatMenuMakerMap_AddHumanlikeOrders.cs" />
+    <Compile Include="Harmony\JobGiver_PickUpOpportunisticWeapon_ShouldEquip.cs" />
+    <Compile Include="Harmony\Pawn_JobTracker_TryTakeOrderedJob.cs" />
+    <Compile Include="Harmony\WorkGiver_ConstructFinishFrames_JobOnThing.cs" />
+    <Compile Include="Harmony\Listing_TreeThingFilter_Visible.cs" />
+    <Compile Include="Harmony\ThingFilterUI_DoThingFilterConfigWindow.cs" />
+    <Compile Include="Harmony\Dialog_BillConfig_DoWindowContents.cs" />
     <Compile Include="ITab_Inventory.cs" />
     <Compile Include="JobDriver_DocumentTech.cs" />
     <Compile Include="JobDriver_LearnWeapon.cs" />
     <Compile Include="ExpertiseNode.cs" />
+    <Compile Include="Graphic\Node.cs" />
     <Compile Include="RoomRoleWorker_Library.cs" />
     <Compile Include="StatPart_AvailableBooks.cs" />
     <Compile Include="UnlockManager.cs" />
