Trying to solve research bench presence check, partial success.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -326,8 +326,10 @@
     <Compile Include="CompProperties_TitleMaker.cs" />
     <Compile Include="CompProperties_StorageGraphic.cs" />
     <Compile Include="CompStorageGraphic.cs" />
+    <Compile Include="Extension_ResearchProjectDef.cs" />
     <Compile Include="Harmony\HarmonyPatch.cs" />
     <Compile Include="Harmony\GoExplore_Patches.cs" />
+    <Compile Include="Harmony\ResearchProjectDef_PlayerHasAnyAppropriateResearchBench.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\Constants.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Assets.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Patches.cs" />
