--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -331,6 +331,7 @@
     <Compile Include="Extensions\Extension_ResearchProjectDef.cs" />
     <Compile Include="Harmony\HarmonyPatch.cs" />
     <Compile Include="Harmony\GoExplore_Patches.cs" />
+    <Compile Include="Harmony\MaterialFilter_Patch.cs" />
     <Compile Include="Harmony\ResearchProjectDef_PlayerHasAnyAppropriateResearchBench.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\Constants.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Assets.cs" />
