--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -329,6 +329,8 @@
     <Compile Include="Books\CompStorageGraphic.cs" />
     <Compile Include="Extensions\Extension_Building_WorkTable.cs" />
     <Compile Include="Extensions\Extension_ResearchProjectDef.cs" />
+    <Compile Include="Harmony\Compatibility\SimpleSidearms_Patches.cs" />
+    <Compile Include="Harmony\EquipmentUtility_CanEquip.cs" />
     <Compile Include="Harmony\WorkGiver_DoBill_TryFindBestBillIngredients.cs" />
     <Compile Include="Harmony\Compatibility\RecipeIcons_Patch.cs" />
     <Compile Include="Harmony\HarmonyPatch.cs" />
