Documenting added to Tech Tree float menu, tasks are indicated.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -322,6 +322,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\TechJobDefOf .cs" />
+    <Compile Include="Base\TechStrings.cs" />
     <Compile Include="Base\TechWorkDefOf.cs" />
     <Compile Include="Base\TechDefOf.cs" />
     <Compile Include="Books\Building_BookStore.cs" />
