--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -343,6 +343,7 @@
     <Compile Include="Books\CompProperties_StorageGraphic.cs" />
     <Compile Include="Books\CompStorageGraphic.cs" />
     <Compile Include="CompUseEffect_LearnRandomResearchProject.cs" />
+    <Compile Include="Extensions\Extension_ThingDef.cs" />
     <Compile Include="Extensions\Extension_Pawn.cs" />
     <Compile Include="Harmony\Compatibility\Royalty\Royalty_Patches.cs" />
     <Compile Include="Harmony\Compatibility\Royalty\JobDriver_ApplyTechprint_TryMakePreToilReservations.cs" />
@@ -386,6 +387,7 @@
     <Compile Include="Base\ModBaseHumanResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Work\WorkGiver_DocumentTech.cs" />
+    <Compile Include="Work\WorkGiver_ExperimentWeapon.cs" />
     <Compile Include="Work\WorkGiver_LearnWeapon.cs" />
     <Compile Include="Work\WorkGiver_PracticeWeapon.cs" />
     <Compile Include="Work\WorkGiver_ResearchTech.cs" />
