Improved joy activities.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -372,6 +372,8 @@
     <Compile Include="Harmony\Pawn_JobTracker_TryTakeOrderedJob.cs" />
     <Compile Include="Harmony\WorkGiver_ConstructFinishFrames_JobOnThing.cs" />
     <Compile Include="Books\ITab_Inventory.cs" />
+    <Compile Include="Work\JoyGiver_PlayWithWeapon.cs" />
+    <Compile Include="Work\JobDriver_PlayWithWeapon.cs" />
     <Compile Include="Work\JobDriver_DocumentTech.cs" />
     <Compile Include="Work\JobDriver_LearnWeapon.cs" />
     <Compile Include="Graphic\ExpertiseNode.cs" />
