--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -346,9 +346,8 @@
     <Compile Include="Extensions\Extension_ThingDef.cs" />
     <Compile Include="Extensions\Extension_Pawn.cs" />
     <Compile Include="Harmony\Compatibility\ChildrenSchoolLearning_Patch.cs" />
-    <Compile Include="Harmony\Compatibility\Royalty\Royalty_Patches.cs" />
-    <Compile Include="Harmony\Compatibility\Royalty\JobDriver_ApplyTechprint_TryMakePreToilReservations.cs" />
-    <Compile Include="Harmony\Compatibility\Royalty\CompTechprint_CompFloatMenuOptions.cs" />
+    <Compile Include="Harmony\JobDriver_ApplyTechprint_TryMakePreToilReservations.cs" />
+    <Compile Include="Harmony\CompTechprint_CompFloatMenuOptions.cs" />
     <Compile Include="Harmony\ThingOwnerUtility_GetAllThingsRecursively.cs" />
     <Compile Include="Harmony\EquipmentUtility_CanEquip_NewTmp.cs" />
     <Compile Include="Harmony\Listing_TreeThingFilter_Visible.cs" />
