Implemented Jobs fields exposing.

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /Source/SlotGroup_BookStore.cs
+/Source/Harmony/Test/Alert_NeedResearchProject_GetReport.cs
