--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -333,6 +333,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Books\Building_NetworkServer.cs" />
+    <Compile Include="Extensions\Extension_Map.cs" />
     <Compile Include="Harmony\Compatibility\Hospitality_Patches.cs" />
     <Compile Include="Harmony\WorkGiver_DoBill_TryFindBestBillIngredientsInSet.cs" />
     <Compile Include="Knowledge\PawnBackgroundUtility.cs" />
@@ -382,6 +383,7 @@
     <Compile Include="Harmony\Pawn_JobTracker_TryTakeOrderedJob.cs" />
     <Compile Include="Harmony\WorkGiver_ConstructFinishFrames_JobOnThing.cs" />
     <Compile Include="Books\ITab_Inventory.cs" />
+    <Compile Include="Work\JobDriver_ScanBook.cs" />
     <Compile Include="Work\JobDriver_DocumentTechDigital.cs" />
     <Compile Include="Work\LearningUtility.cs" />
     <Compile Include="Work\JoyGiver_PlayWithWeapon.cs" />
@@ -400,6 +402,7 @@
     <Compile Include="Knowledge\CompKnowledge.cs" />
     <Compile Include="Base\ModBaseHumanResources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Work\WorkGiver_ScanBook.cs" />
     <Compile Include="Work\WorkGiver_DocumentTech.cs" />
     <Compile Include="Work\WorkGiver_ExperimentWeapon.cs" />
     <Compile Include="Work\WorkGiver_LearnWeapon.cs" />
