--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,5 @@ ASALocalRun/
 healthchecksdb
 /Source/SlotGroup_BookStore.cs
 /Source/Harmony/Test/Alert_NeedResearchProject_GetReport.cs
+/Textures/Things/Item/drive_m.png
+/Textures/Things/Item/drive.png
