Implemented library bonus for network terminal, simplified  where().Any().

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -333,6 +333,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Books+Buildings\Building_NetworkServer.cs" />
+    <Compile Include="Books+Buildings\CompProperties_NetworkAccess.cs" />
+    <Compile Include="Books+Buildings\CompNetworkAccess.cs" />
     <Compile Include="Books+Buildings\ShootingRangeUtility.cs" />
     <Compile Include="Books+Buildings\CompProperties_ShootingArea.cs" />
     <Compile Include="Books+Buildings\CompShootingArea.cs" />
