Fixed book scanning not finding drives, implemented their consumption when scanned. Preparing for launch.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -340,6 +340,7 @@
     <Compile Include="Books+Buildings\CompShootingArea.cs" />
     <Compile Include="Books+Buildings\PlaceWorker_ShootingRange.cs" />
     <Compile Include="Extensions\Extensions.cs" />
+    <Compile Include="Harmony\Toils_Recipe_Patch.cs" />
     <Compile Include="Harmony\Compatibility\Hospitality_Patches.cs" />
     <Compile Include="Harmony\StatsToDraw_Patch.cs" />
     <Compile Include="Harmony\ThingOwner_NotifyRemoved.cs" />
