Fixes #142: implemented world component to save archived technologies independent of server or manager.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -332,6 +332,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\TechDatabase.cs" />
     <Compile Include="Books+Buildings\Building_NetworkServer.cs" />
     <Compile Include="Books+Buildings\CompProperties_NetworkAccess.cs" />
     <Compile Include="Books+Buildings\CompNetworkAccess.cs" />
