Techs/skills caching & lookup overhaul.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -334,6 +334,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\TechDatabase.cs" />
+    <Compile Include="Base\TechTracker.cs" />
     <Compile Include="Books+Buildings\Building_NetworkServer.cs" />
     <Compile Include="Books+Buildings\CompProperties_NetworkAccess.cs" />
     <Compile Include="Books+Buildings\CompNetworkAccess.cs" />
